Fix misaligned arrows icon on projects/skills links

--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -52,6 +52,7 @@ $arrow-animation-delay: 0.06s;
 $arrow-animation-timingfunction: ease-out;
 
 .projects-link__icon {
+  vertical-align: middle;
   height: 30px;
   width: 30px;
   display: inline-block;
