--- a/_sass/skills.scss
+++ b/_sass/skills.scss
@@ -53,6 +53,7 @@
 }
 
 .skills-link__icon {
+  vertical-align: middle;
   height: 30px;
   width: 30px;
   display: inline-block;
